maven을 gradle로 변환

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,16 @@
             "projectName": "TreeNut",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-TreeNutApplication<ChatBot_Backend>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "TreeNut.TreeNut.TreeNutApplication",
+            "projectName": "ChatBot_Backend",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
