--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# 애플리케이션 이름 설정
 spring.application.name=TreeNut
+# 네이버 OAuth2 클라이언트 설정
+spring.security.oauth2.client.registration.naver.client-id=rr9TRFLLfTq4_wmMhDKk
+spring.security.oauth2.client.registration.naver.client-secret=UUgfpNhlz0
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=profile
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# 네이버 OAuth2 공급자 설정
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response.id
