--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'mysql:mysql-connector-java:8.0.27'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'io.github.cdimascio:dotenv-java:2.3.0' //로그인 관련 키 빼놓은것 현재 수정중
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
