--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # 네이버 OAuth2 클라이언트 설정
-spring.security.oauth2.client.registration.naver.client-id=
-spring.security.oauth2.client.registration.naver.client-secret=
+spring.security.oauth2.client.registration.naver.client-id= rr9TRFLLfTq4_wmMhDKk
+spring.security.oauth2.client.registration.naver.client-secret=UUgfpNhlz0
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=profile
@@ -11,3 +11,10 @@ spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=id
+
+# MySQL 연결 설정
+spring.datasource.url=jdbc:mysql://localhost:3306/chatbot?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
